--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindui/react": "^0.1.1",
     "next": "12.1.0",
     "nodemailer": "^6.7.3",
     "react": "17.0.2",
