--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tailwindui/react": "^0.1.1",
-    "next": "12.1.0",
-    "nodemailer": "^6.7.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "typewriter-effect": "^2.18.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
-  }
+    "name": "portfolio",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@tailwindui/react": "^0.1.1",
+        "next": "12.1.0",
+        "nodemailer": "^6.7.3",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-icons": "^4.3.1",
+        "typewriter-effect": "^2.18.2"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.0",
+        "autoprefixer": "^10.4.4",
+        "eslint": "8.11.0",
+        "eslint-config-next": "12.1.0",
+        "postcss": "^8.4.12",
+        "prettier": "2.6.2",
+        "tailwindcss": "^3.0.23"
+    }
 }
