--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "eslint": "8.11.0",
         "eslint-config-next": "12.1.0",
         "postcss": "^8.4.12",
+        "postcss-preset-env": "^7.4.4",
         "prettier": "2.6.2",
         "tailwindcss": "^3.0.23"
     }
